--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             </figure>
 				</li><!--
 				--><li class="Gallery-item">
-					<figure>
+					<figure><a href="beymoji.html">
 						<img src="images/icons.png" alt="image2" />
 						<figcaption><p>Beymoji</p></figcaption>
 					</figure>
