--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
     <h1>About Me!</h1>
     <img class="me" src="images/me1.png" alt="Me"/> 
     
-        <p>Hi! I'm Pearse and I'm a 20 year old Graphic Designer based in Belfast, Ireland. I currently study Interaction Deisgn at the Belfast School of Art. I have always had a keen interest in branding and identity design but through my time as an IxD student I have developed a love for creating illustrations and icons therefore Adobe Illustrator is one of my favourite pieces of software to use. 
+        <p>Hi! I'm Pearse and I'm a 20 year old Graphic Designer based in Belfast, Ireland. I currently study  <a href="https://www.ixdbelfast.org/" class="link-2">Interaction Design</a> at the Belfast School of Art. I have always had a keen interest in branding and identity design but through my time as an IxD student I have developed a love for creating illustrations and icons therefore Adobe Illustrator is one of my favourite pieces of software to use. 
 </p>
     <p>In my spare time I love to travel and experience the outdoors, I recently travelled New Zealand (pictured above). Photography is a great interest of mine and needless to say I do a lot of <a href="https://www.instagram.com/pearseoneilldesign/" class="link-2">instagramming</a>. </p>
         
