--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     <div class="case-study-gallery">
     <hr>
   <h2 class="center">Work</h2>
-        <p>This is a selection of my work from my portfolio.</p>
+        <p>A selection of my favourite woks</p>
          
 <div class="Container">
 			<ul class="Gallery"><!--
