--- a/beymoji.html
+++ b/beymoji.html
@@ -42,7 +42,7 @@
     
     <h2>Final Outcome</h2>
     <p>I was very pleased with how the final screens looked, my colour scheme was strong and worked well with the branding. No screen looks out of place in terms of format . Looking forward I would like to start to actually develop this app and see it brough to life</p>
-     <img class="bey" src="images/beymoji.png" alt="Final Outcome"/>
+     <img class="bey" src="images/beymoj.png" alt="Final Outcome"/>
 
 
 </html>
