--- a/beymoji.html
+++ b/beymoji.html
@@ -35,13 +35,13 @@
 
 <p>In April of 2016 Beyoncé dropped Lemonade, her sixth . album, 12 tracks, accompanied by an hour-long film with a video for all 12 songs (12 videos, 12 icons... see my thinking?). Lemonade is a record breaking critically acclaimed piece of art that sold milions world wide and the associated tour grossed over $250 million. Lemonade is clearly an extremely profitable force so why not jump on the bandwagon!</p>
 
-<p>When I began to design my screens on illustrator I first started with the illustrations I would have to do, I had to illustrate a landscape, then I was going to illustrate 4 example animals to show and finally I would have to design the icons for each screen. Once this was done I could get stuck into the actual screen formats and insert the illustrations where needed. Once the screens were designed I created a menu bar that would appear on the bottom of each screen and hold my 5 icons.
+<p>
 </p>
    
    <p>Finally I decided to give the app a brand to showcase its full potential. I created a logo for the app store icon and a word mark.</p>
     
     <h2>Final Outcome</h2>
-    <p>I was very pleased with how the final screens looked, my colour scheme was strong and worked well with the branding. No screen looks out of place in terms of format . Looking forward I would like to start to actually develop this app and see it brough to life</p>
+    <p>I was very pleased with how the final icons looked, my colour scheme was strong and works well with throughought. No icon looks out of place when they are altogether. Looking forward I would like to start to get merchandise made with these icons to sell.</p>
      <img class="bey" src="images/beymoj.png" alt="Final Outcome"/>
 
 
