--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="about.html">About</a></li>
         <li><a href="http://pearseoneill.tumblr.com/">Journal</a></li>
-        <li><a href="conact.html">Contact</a></li>
+        <li><a href="conact.html">Contact</a>
+        <li><a href="/CV2017.pdf" download>CV</a></li>
+
       </ul>
     </nav>
     </header>
