--- a/index.html
+++ b/index.html
@@ -50,19 +50,19 @@
 				--><li class="Gallery-item">
             <figure><a href="lemonade.html">
               <img src="images/icons1.png" alt="image1" />
-              <figcaption><p>Lemonade Illustrated</p></figcaption>
+              <figcaption><p>Icon Design</p></figcaption>
             </figure>
 				</li><!--
 				--><li class="Gallery-item">
 					<figure><a href="elements.html"/a>
 						<img src="images/elements.png" alt="image2" />
-						<figcaption><p>Elements</p></figcaption>
+						<figcaption><p>Web Design</p></figcaption>
 					</figure>
 				</li><!--
 				--><li class="Gallery-item">
 						<figure> <a href="travelapp.html"/a>
 							<img src="images/travelapp" alt="image3" />
-							<figcaption><p>Travel App</p></figcaption>
+							<figcaption><p>App Design</p></figcaption>
 						</figure>
 				</li><!--
 				--><li class="Gallery-item">
@@ -74,13 +74,13 @@
 				--><li class="Gallery-item">
 						<figure> <a href="zine.html"/a>
 							<img src="images/zine.png" />
-							<figcaption><p>'Not ours'<br>Zine</p></figcaption>
+							<figcaption><p>Print</p></figcaption>
 						</figure>
 				</li><!--
 				--><li class="Gallery-item">
 						<figure> <a href="brand.html"/a>
 							<img src="images/personalbrand.png" />
-							<figcaption><p>Personal Brand</p></figcaption>
+							<figcaption><p>Branding</p></figcaption>
 						</figure>
 				</li><!--
    --></ul>
