--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <img class="monogram" src="images/mono.png" alt="Monogram"/> 
     </section>
      
-      <h1 class="center">Hi! I'm Pearse and I'm a Graphic Designer based in Belfast <br> Welcome to my Portfolio!</h1>
+      <h1 class="center">Hi! I'm Pearse and I'm an Interaction Designer based in Belfast <br> Welcome to my Portfolio!</h1>
 
      <div class="arrow center">
             <a data-scroll href="#work"><img src="images/arrow1.png" alt="arrow to work" /></a>
